<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/army2"
    tools:context=".ui.form.MovieAddUpdateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/l"
                android:text="@string/title_form"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivBack"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/m"
                android:layout_marginTop="@dimen/m"
                android:src="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@drawable/bg_half_top_white"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingTop="24dp"
                android:paddingEnd="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/m"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/s"
                        android:text="@string/lbl_title"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@drawable/bg_rounded_lightgrey"
                        android:hint="@string/ph_title"
                        android:inputType="textPersonName|textNoSuggestions"
                        android:paddingHorizontal="@dimen/m"
                        android:textColor="@color/text_primary" />

                    <TextView
                        android:id="@+id/tvInvalidTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/s"
                        android:text="@string/err_title"
                        android:textColor="@color/text_danger"
                        android:textSize="12sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/m"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelOverview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/s"
                        android:text="@string/lbl_overview"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtOverview"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:background="@drawable/bg_rounded_lightgrey"
                        android:gravity="top"
                        android:hint="@string/ph_overview"
                        android:inputType="textMultiLine|textCapSentences"
                        android:paddingHorizontal="@dimen/m"
                        android:paddingVertical="@dimen/m"
                        android:textColor="@color/text_primary" />

                    <TextView
                        android:id="@+id/tvInvalidOverview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/s"
                        android:text="@string/err_overview"
                        android:textColor="@color/text_danger"
                        android:textSize="12sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/m"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelDuration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/s"
                        android:text="@string/lbl_duration"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/container_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtDuration"
                            android:layout_width="100dp"
                            android:layout_height="56dp"
                            android:background="@drawable/bg_rounded_lightgrey"
                            android:hint="@string/ph_duration"
                            android:inputType="numberSigned"
                            android:paddingHorizontal="@dimen/m"
                            android:textColor="@color/text_primary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/m"
                            android:text="Menit"
                            android:textColor="@color/text_primary" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvInvalidDuration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/container_duration"
                        android:layout_marginTop="@dimen/s"
                        android:text="@string/err_duration"
                        android:textColor="@color/text_danger"
                        android:textSize="12sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/m"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelAgeRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/s"
                        android:text="@string/lbl_age_rate"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rgAgeRate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbSU"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="@dimen/s"
                            android:text="SU"
                            android:textColor="@color/text_primary" />

                        <RadioButton
                            android:id="@+id/rb13"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="@dimen/s"
                            android:text="13+"
                            android:textColor="@color/text_primary" />

                        <RadioButton
                            android:id="@+id/rb17"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="@dimen/s"
                            android:text="17+"
                            android:textColor="@color/text_primary" />

                        <RadioButton
                            android:id="@+id/rb21"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="@dimen/s"
                            android:text="21+"
                            android:textColor="@color/text_primary" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/tvInvalidAgeRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/err_age_rate"
                        android:textColor="@color/text_danger"
                        android:textSize="12sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/m"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/s"
                        android:text="@string/lbl_genre"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/cbFantasi"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/genre_fantasi"
                        android:textColor="@color/text_primary" />

                    <CheckBox
                        android:id="@+id/cbRomantis"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/genre_romantis"
                        android:textColor="@color/text_primary" />

                    <CheckBox
                        android:id="@+id/cbKomedi"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/genre_komedi"
                        android:textColor="@color/text_primary" />

                    <CheckBox
                        android:id="@+id/cbAksi"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/genre_aksi"
                        android:textColor="@color/text_primary" />

                    <CheckBox
                        android:id="@+id/cbPetualangan"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/genre_petualangan"
                        android:textColor="@color/text_primary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/m"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/m"
                        android:text="@string/lbl_rating"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/s"
                        android:paddingHorizontal="@dimen/s">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/min_rating"
                            android:textColor="@color/text_secondary" />

                        <TextView
                            android:id="@+id/tvRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/min_rating"
                            android:textColor="@color/text_primary"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/max_rating"
                            android:textAlignment="textEnd"
                            android:textColor="@color/text_secondary" />
                    </RelativeLayout>

                    <SeekBar
                        android:id="@+id/sbRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="20"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/tvInvalidRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/s"
                        android:layout_marginTop="@dimen/s"
                        android:text="@string/err_rating"
                        android:textColor="@color/text_danger"
                        android:textSize="12sp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="15dp"
        app:contentPaddingBottom="@dimen/m"
        app:contentPaddingLeft="@dimen/l"
        app:contentPaddingRight="@dimen/l"
        app:contentPaddingTop="@dimen/m">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:height="40dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/simpan"
            android:textColor="@color/army2"
            app:cornerRadius="10dp" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>